--- a/Tennis_Analytics.ipynb
+++ b/Tennis_Analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -66,12 +66,14 @@
     "print()\n",
     "\n",
     "print(\"There are %d matches in the database.\" % len(df_matches))\n",
-    "# df_matches.head(30)"
+    "# df_matches.head(30)\n",
+    "\n",
+    "df_matches.to_excel(\"charting-m-matches-cleaned.xls\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -102,12 +104,12 @@
        "david_ferrer              47\n",
        "dominic_thiem             46\n",
        "karim_mohamed_maamoun     46\n",
-       "tomas_berdych             40\n",
        "daniil_medvedev           40\n",
+       "tomas_berdych             40\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 639,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 640,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -164,9 +166,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    handedness                     player\n",
+      "0            r             ernests_gulbis\n",
+      "1            r           alexander_bublik\n",
+      "2            r          mikhail_kukushkin\n",
+      "3            r             novak_djokovic\n",
+      "4            r                marin_cilic\n",
+      "..         ...                        ...\n",
+      "512          r  christophe_roger_vasselin\n",
+      "513          r              brian_teacher\n",
+      "514          r                jiri_hrebec\n",
+      "515          r            adriano_panatta\n",
+      "516          r               ken_rosewall\n",
+      "\n",
+      "[517 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# clean the handedness columns because there are errors. Create a table of players and their handednesses.\n",
     "df_players_handedness = pd.DataFrame()\n",
@@ -230,19 +253,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the results to XLS files for use later.\n",
-    "df_matches.to_excel(\"charting-m-matches-cleaned.xls\")\n",
+    "\n",
     "df_players_handedness.dropna(inplace=True)\n",
     "df_players_handedness.to_excel(\"player-handedness.xls\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 641,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 643,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -313,24 +336,24 @@
       "halle                       27\n",
       "masters_cup                 25\n",
       "hamburg_masters             24\n",
-      "washington                  22\n",
       "brisbane                    22\n",
+      "washington                  22\n",
       "basel                       20\n",
       "barcelona                   20\n",
       "sydney                      17\n",
-      "stockholm                   14\n",
       "rio_de_janeiro              14\n",
-      "marseille                   13\n",
+      "stockholm                   14\n",
       "davis_cup_world_group_f     13\n",
-      "atp_cup                     13\n",
       "tokyo                       13\n",
       "acapulco                    13\n",
+      "marseille                   13\n",
+      "atp_cup                     13\n",
       "beijing                     12\n",
       "munich                      12\n",
       "stuttgart                   11\n",
       "sofia                       11\n",
-      "vienna                      10\n",
       "cordoba                     10\n",
+      "laver_cup                   10\n",
       "Name: Tournament, dtype: int64\n"
      ]
     }
@@ -344,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 644,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +376,7 @@
        "34"
       ]
      },
-     "execution_count": 644,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 645,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 648,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +439,7 @@
        "249"
       ]
      },
-     "execution_count": 648,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 650,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +462,7 @@
        "34"
       ]
      },
-     "execution_count": 650,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 622,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,25 +840,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chi-squared test results:\n",
-      "chi2 test stats = 36.548961\n",
-      "p = 0.000000\n",
-      "dof = 2 \n",
-      "probability=0.950, critical=5.991, stat=36.549\n",
-      "Dependent (reject H0)\n",
-      "significance=0.050, p=0.000\n",
-      "Dependent (reject H0)\n",
-      "           wide   body      t\n",
-      "server                       \n",
-      "federer   946.0  179.0  839.0\n",
-      "djokovic  867.0  308.0  880.0\n"
+     "ename": "NameError",
+     "evalue": "name 'serve_stats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-0b51a30d135d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#                                   [\"server\", \"wide\", \"body\", \"t\"]]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m players_d_1st_Sv = serve_stats.loc[(serve_stats[\"serve_side\"] == \"deuce\") & (serve_stats[\"serve_sequence\"] == \"Sv1_direction\"), \n\u001b[0m\u001b[1;32m      5\u001b[0m                                   [\"server\", \"wide\", \"body\", \"t\"]]\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'serve_stats' is not defined"
      ]
     }
    ],
@@ -851,25 +867,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 624,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chi-squared test results:\n",
-      "chi2 test stats = 5.393308\n",
-      "p = 0.067431\n",
-      "dof = 2 \n",
-      "probability=0.950, critical=5.991, stat=5.393\n",
-      "Independent (fail to reject H0)\n",
-      "significance=0.050, p=0.067\n",
-      "Independent (fail to reject H0)\n",
-      "          wide   body      t\n",
-      "server                      \n",
-      "federer  946.0  179.0  839.0\n",
-      "federer  909.0  153.0  688.0\n"
+     "ename": "NameError",
+     "evalue": "name 'federer_djokovic_serve_stats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-a7caa0ee68d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mserve_sequence\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Sv1_direction\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m federer_djokovic_serve_direction = federer_djokovic_serve_stats.loc[(federer_djokovic_serve_stats[\"server\"] == player) & \n\u001b[0m\u001b[1;32m      6\u001b[0m                                                            \u001b[0;34m(\u001b[0m\u001b[0mfederer_djokovic_serve_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"serve_side\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mserve_side\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m&\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m                                                           (federer_djokovic_serve_stats[\"serve_sequence\"] == serve_sequence), [\"server\", \"wide\", \"body\", \"t\"]]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'federer_djokovic_serve_stats' is not defined"
      ]
     }
    ],
@@ -890,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
