removed to another repository

--- a/Tennis_Analytics.ipynb
+++ b/Tennis_Analytics.ipynb
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,12 +803,12 @@
     "from scipy.stats import chi2_contingency\n",
     "from scipy.stats import chi2\n",
     "\n",
-    "# chi-squared test\n",
+    "# Chi-square independence test\n",
     "def chi_square(data, print_table = False):\n",
     "\n",
     "    table = data.copy()\n",
     "\n",
-    "    table = table.set_index(\"server\")\n",
+    "#     table = table.set_index(\"server\")\n",
     "\n",
     "    test_stats, p, dof, expected = chi2_contingency(table)\n",
     "    print(\"chi-squared test results:\")\n",
@@ -903,7 +903,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Chi-square independence test\n",
     "def compare_players_chi_square(table):\n",
     "    servers = table[\"server\"].unique()\n",
     "    serve_sides = table[\"serve_side\"].unique()\n",
@@ -918,6 +917,113 @@
     "            print(serve_sequence)\n",
     "            chi_square(data=my_data, print_table=True)\n",
     "            print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if there is a difference in serve directions between ad and deuce sides\n",
+    "def compare_players_serves_on_different_sides(player, first_serve=True, surface=None, opponent=None):\n",
+    "    selected_points = select_players_points(df_points, df_matches, player, opponent)\n",
+    "    \n",
+    "    if first_serve == True:\n",
+    "        serve_sequence = \"Sv1_direction\"\n",
+    "    else:\n",
+    "        serve_sequence = \"Sv2_direction\"\n",
+    "        \n",
+    "    if selected_points.empty != True:\n",
+    "        selected_points = identify_serve_side(selected_points)\n",
+    "        selected_points = identify_serve_direction_outcome(selected_points)\n",
+    "        selected_points = identify_server_name(selected_points)\n",
+    "        my_data = selected_points.loc[(selected_points[\"server_name\"].str.contains(player))]\n",
+    "        contingency_table = pd.DataFrame()\n",
+    "            \n",
+    "        for serve_side in my_data[\"serve_side\"].unique():\n",
+    "            # Must use .loc[], as not using .loc[] does not result in a Series\n",
+    "            #Without Series, you cannot use value_counts()\n",
+    "            serve_frequency = my_data.loc[(my_data[\"serve_side\"] == serve_side), serve_sequence].value_counts()\n",
+    "            serve_frequency[\"serve_side\"] = serve_side\n",
+    "            contingency_table = contingency_table.append(serve_frequency, ignore_index = True)        \n",
+    "        contingency_table = contingency_table.set_index(\"serve_side\")\n",
+    "        contingency_table.fillna(value=0, inplace=True)\n",
+    "        contingency_table = contingency_table[[\"wide\", \"body\", \"t\"]]\n",
+    "        print(contingency_table)\n",
+    "        chi_square(contingency_table, print_table = False)\n",
+    "    else:\n",
+    "        print(\"No matches found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if there is a difference in serve directions between ad and deuce sides\n",
+    "def compare_players_serves_on_different_surfaces(player, first_serve=True, opponent=None):\n",
+    "    surfaces = [\"hard\", \"clay\", \"grass\"]\n",
+    "    \n",
+    "    if first_serve == True:\n",
+    "        serve_sequence = \"Sv1_direction\"\n",
+    "    else:\n",
+    "        serve_sequence = \"Sv2_direction\"\n",
+    "        \n",
+    "    contingency_table = pd.DataFrame()\n",
+    "    for surface in surfaces:\n",
+    "        matches_by_surface = select_matches(data=df_matches, player1=player, player2=opponent, surface=surface)\n",
+    "        selected_points = select_players_points(df_points, matches_by_surface, player, opponent)\n",
+    "        \n",
+    "        if selected_points.empty != True:\n",
+    "            selected_points = identify_serve_side(selected_points)\n",
+    "            selected_points = identify_serve_direction_outcome(selected_points)\n",
+    "            selected_points = identify_server_name(selected_points)\n",
+    "            my_data = selected_points.loc[(selected_points[\"server_name\"].str.contains(player))]\n",
+    "\n",
+    "            # Must use .loc[], as not using .loc[] does not result in a Series\n",
+    "            # Without Series, you cannot use value_counts()\n",
+    "            serve_frequency = my_data[serve_sequence].value_counts()\n",
+    "            serve_frequency[\"surface\"] = surface\n",
+    "            contingency_table = contingency_table.append(serve_frequency, ignore_index = True)    \n",
+    "        else:\n",
+    "            print(\"No matches found\")\n",
+    "            \n",
+    "    contingency_table = contingency_table.set_index(\"surface\")\n",
+    "    contingency_table.fillna(value=0, inplace=True)\n",
+    "    contingency_table = contingency_table[[\"wide\", \"body\", \"t\"]]\n",
+    "    print(contingency_table)\n",
+    "    chi_square(contingency_table, print_table = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No matches found\n",
+      "         wide  body     t\n",
+      "surface                  \n",
+      "hard      4.0  11.0   5.0\n",
+      "clay     94.0  31.0  78.0\n",
+      "chi-squared test results:\n",
+      "chi2 test stats = 19.006038\n",
+      "p = 0.000075\n",
+      "dof = 2 \n",
+      "probability=0.950, critical=5.991, stat=19.006\n",
+      "Dependent (reject H0)\n",
+      "significance=0.050, p=0.000\n",
+      "Dependent (reject H0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "compare_players_serves_on_different_surfaces(\"londero\", first_serve=False)"
    ]
   },
   {
