--- a/Tennis_Analytics.ipynb
+++ b/Tennis_Analytics.ipynb
@@ -818,41 +818,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_contingency_table(data, player1, player2):\n",
-    "    data = data.copy()\n",
-    "    \n",
-    "    players = [player1, player2]\n",
-    "    serve_sides = [\"deuce\", \"ad\"]\n",
-    "    serve_seqs = [\"Sv1_direction\", \"Sv2_direction\"]\n",
-    "\n",
-    "    serve_stats = pd.DataFrame() \n",
-    "\n",
-    "    for player in players:\n",
-    "        for serve_side in serve_sides:\n",
-    "            for serve_seq in serve_seqs:\n",
-    "                serve_dir_counts = data.loc[(data[\"server_name\"].str.contains(player)) & \n",
-    "                                             (data[\"serve_side\"] == serve_side), serve_seq].value_counts()\n",
-    "    #             print(serve_dir_counts)\n",
-    "                serve_dir_counts[\"server\"] = player\n",
-    "                serve_dir_counts[\"serve_side\"] = serve_side\n",
-    "                serve_dir_counts[\"serve_sequence\"] = serve_seq\n",
-    "                serve_stats = serve_stats.append(serve_dir_counts, ignore_index=True)\n",
-    "\n",
-    "    # federer_nadal_serve_stats = serve_stats[[\"server\", \"serve_side\", \"serve_sequence\", \"wide\", \"body\", \"t\"]]\n",
-    "    serve_stats = serve_stats[[\"server\", \"serve_side\", \"serve_sequence\", \"wide\", \"body\", \"t\"]]\n",
-    "#     print(federer_djokovic_serve_stats) \n",
-    "#     print(federer_nadal_serve_stats)\n",
-    "\n",
-    "    # serve_stats.to_csv(\"fed_nadal_saerve_dir.csv\")\n",
-    "    return serve_stats"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 242,
    "metadata": {},
    "outputs": [],
@@ -1277,75 +1242,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_player_serves_when_they_play_each_other(point_data, match_data, player1, player2, surface):\n",
+    "    \n",
+    "    my_matches = select_matches(data=match_data, player1=player1, player2=player2, surface=surface)\n",
+    "    df_points_selected = select_players_points(point_data=point_data, match_data=my_matches)\n",
+    "    \n",
+    "    if df_points_selected.empty == False:      \n",
+    "        players = [player1, player2]\n",
+    "        serve_sides = [\"deuce\", \"ad\"]\n",
+    "        serve_seqs = [\"Sv1_direction\", \"Sv2_direction\"]\n",
+    "        surfaces = [\"hard\", \"clay\", \"grass\"]\n",
+    "        \n",
+    "        print(surface)\n",
+    "        for serve_side in serve_sides:\n",
+    "            print(serve_side)\n",
+    "            for serve_seq in serve_seqs:\n",
+    "                print(serve_seq)\n",
+    "                contingency_table = pd.DataFrame()\n",
+    "\n",
+    "                for player in players:\n",
+    "                    serve_dir_counts = df_points_selected.loc[(df_points_selected[\"server_name\"].str.contains(player)) & \n",
+    "                                                              (df_points_selected[\"serve_side\"] == serve_side), serve_seq].value_counts()\n",
+    "        #             print(serve_dir_counts)\n",
+    "                    serve_dir_counts[\"server_name\"] = player\n",
+    "                    contingency_table = contingency_table.append(serve_dir_counts, ignore_index=True)\n",
+    "\n",
+    "                contingency_table.set_index(\"server_name\", inplace=True)\n",
+    "                contingency_table = contingency_table[[\"wide\", \"body\", \"t\"]]\n",
+    "                chi_square(contingency_table, print_table = True)\n",
+    "                print()\n",
+    "    else:\n",
+    "        print(\"No match found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    server serve_side serve_sequence  wide  body      t\n",
-      "0  kyrgios      deuce  Sv1_direction  61.0  19.0  128.0\n",
-      "1  kyrgios      deuce  Sv2_direction  18.0  26.0   29.0\n",
-      "2  kyrgios         ad  Sv1_direction  95.0  16.0   79.0\n",
-      "3  kyrgios         ad  Sv2_direction  51.0   8.0   17.0\n",
-      "4  federer      deuce  Sv1_direction  89.0  15.0   80.0\n",
-      "5  federer      deuce  Sv2_direction  20.0  23.0   16.0\n",
-      "6  federer         ad  Sv1_direction  97.0  14.0   55.0\n",
-      "7  federer         ad  Sv2_direction  30.0  22.0   12.0\n",
-      "serve_side: deuce\n",
-      "Sv1_direction\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-272-c9b916a9aa74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mcontingency_table\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_contingency_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_points_selected\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplayer1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplayer2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontingency_table\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mcompare_players_chi_square\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontingency_table\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-243-c5f7333c9e64>\u001b[0m in \u001b[0;36mcompare_players_chi_square\u001b[0;34m(table)\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"serve_side: \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mserve_side\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mserve_sequence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m             \u001b[0mchi_square\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmy_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprint_table\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-242-50459fe214eb>\u001b[0m in \u001b[0;36mchi_square\u001b[0;34m(data, print_table)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m#     table = table.set_index(\"server\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mtest_stats\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdof\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpected\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchi2_contingency\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtable\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"chi-squared test results:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"chi2 test stats = %f\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mtest_stats\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/scipy/stats/contingency.py\u001b[0m in \u001b[0;36mchi2_contingency\u001b[0;34m(observed, correction, lambda_)\u001b[0m\n\u001b[1;32m    242\u001b[0m     \"\"\"\n\u001b[1;32m    243\u001b[0m     \u001b[0mobserved\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobserved\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 244\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobserved\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    245\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"All values in `observed` must be nonnegative.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    246\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mobserved\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'str' and 'int'"
+      "clay\n",
+      "deuce\n",
+      "Sv1_direction\n",
+      "chi-squared test results:\n",
+      "chi2 test stats = 367.305472\n",
+      "p = 0.000000\n",
+      "dof = 2 \n",
+      "probability=0.950, critical=5.991, stat=367.305\n",
+      "Dependent (reject H0)\n",
+      "significance=0.050, p=0.000\n",
+      "Dependent (reject H0)\n",
+      "              wide   body      t\n",
+      "server_name                     \n",
+      "nadal         78.0  249.0  493.0\n",
+      "federer      443.0   92.0  314.0\n",
+      "\n",
+      "Sv2_direction\n",
+      "chi-squared test results:\n",
+      "chi2 test stats = 141.023824\n",
+      "p = 0.000000\n",
+      "dof = 2 \n",
+      "probability=0.950, critical=5.991, stat=141.024\n",
+      "Dependent (reject H0)\n",
+      "significance=0.050, p=0.000\n",
+      "Dependent (reject H0)\n",
+      "              wide  body     t\n",
+      "server_name                   \n",
+      "nadal         24.0  80.0  98.0\n",
+      "federer      202.0  67.0  47.0\n",
+      "\n",
+      "ad\n",
+      "Sv1_direction\n",
+      "chi-squared test results:\n",
+      "chi2 test stats = 221.974035\n",
+      "p = 0.000000\n",
+      "dof = 2 \n",
+      "probability=0.950, critical=5.991, stat=221.974\n",
+      "Dependent (reject H0)\n",
+      "significance=0.050, p=0.000\n",
+      "Dependent (reject H0)\n",
+      "              wide   body      t\n",
+      "server_name                     \n",
+      "nadal        628.0   70.0   57.0\n",
+      "federer      374.0  113.0  280.0\n",
+      "\n",
+      "Sv2_direction\n",
+      "chi-squared test results:\n",
+      "chi2 test stats = 133.874111\n",
+      "p = 0.000000\n",
+      "dof = 2 \n",
+      "probability=0.950, critical=5.991, stat=133.874\n",
+      "Dependent (reject H0)\n",
+      "significance=0.050, p=0.000\n",
+      "Dependent (reject H0)\n",
+      "              wide   body     t\n",
+      "server_name                    \n",
+      "nadal        137.0   26.0   2.0\n",
+      "federer       89.0  138.0  86.0\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# Compare players' serves when they play each other\n",
-    "player1 = \"kyrgios\"\n",
-    "player2 = \"federer\"\n",
-    "my_matches = select_matches(data=df_matches, player1=player1, player2=player2, surface=\"hard\")\n",
-    "df_points_selected = select_players_points(point_data=df_points, match_data=my_matches)\n",
-    "if df_points_selected.empty == False:    \n",
-    "    contingency_table = create_contingency_table(df_points_selected, player1, player2)\n",
-    "    print(contingency_table)\n",
-    "    compare_players_chi_square(contingency_table)\n",
-    "    \n",
-    "else:\n",
-    "    print(\"No results found\")"
+    "compare_player_serves_when_they_play_each_other(df_points, df_matches, \"nadal\", \"federer\", \"clay\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
     "# To-do: Compare players' serves when they play the same player\n",
-    "player1 = \"federer\"\n",
-    "player2 = \"nishikori\"\n",
-    "df_points_selected = select_players_points(point_data=df_points, match_data=df_matches, player1=player1, player2=player2)\n",
-    "if df_points_selected.empty == False:    \n",
-    "    df_points_selected = identify_serve_side(df_points_selected)\n",
-    "    df_points_selected = identify_serve_direction_outcome(df_points_selected)\n",
-    "    df_points_selected = identify_server_name(df_points_selected)\n",
-    "    contingency_table = create_contingency_table(df_points_selected, player1, player2)\n",
-    "    compare_players_chi_square(contingency_table)\n",
+    "def compare_player_serves_when_they_play_same_opponent(point_data, match_data, player1, player2, opponent, surface):\n",
     "    \n",
-    "else:\n",
-    "    print(\"No results found\")"
+    "    my_matches1 = select_matches(data=match_data, player1=player1, player2=opponent, surface=surface)\n",
+    "    if my_matches1.empty:\n",
+    "        print(\"No match found between \" + player1 + \" and \" + opponent)\n",
+    "    df_points_selected1 = select_players_points(point_data=point_data, match_data=my_matches1)\n",
+    "    \n",
+    "    my_matches2 = select_matches(data=match_data, player1=player2, player2=opponent, surface=surface)\n",
+    "    if my_matches2.empty:\n",
+    "        print(\"No match found between \" + player2 + \" and \" + opponent)\n",
+    "    df_points_selected2 = select_players_points(point_data=point_data, match_data=my_matches2)\n",
+    "    \n",
+    "    if (df_points_selected1.empty == False) & (df_points_selected2.empty == False):      \n",
+    "        players = [player1, player2]\n",
+    "        serve_sides = [\"deuce\", \"ad\"]\n",
+    "        serve_seqs = [\"Sv1_direction\", \"Sv2_direction\"]\n",
+    "        surfaces = [\"hard\", \"clay\", \"grass\"]\n",
+    "        \n",
+    "        print(surface)\n",
+    "        for serve_side in serve_sides:\n",
+    "            print(serve_side)\n",
+    "            for serve_seq in serve_seqs:\n",
+    "                print(serve_seq)\n",
+    "                contingency_table = pd.DataFrame()\n",
+    "                \n",
+    "                serve_dir_counts1 = df_points_selected1.loc[(df_points_selected1[\"server_name\"].str.contains(player1)) & \n",
+    "                                                          (df_points_selected1[\"serve_side\"] == serve_side), serve_seq].value_counts()\n",
+    "                serve_dir_counts1[\"server_name\"] = player1\n",
+    "                contingency_table = contingency_table.append(serve_dir_counts1, ignore_index=True)\n",
+    "\n",
+    "                serve_dir_counts2 = df_points_selected2.loc[(df_points_selected2[\"server_name\"].str.contains(player2)) & \n",
+    "                                                          (df_points_selected2[\"serve_side\"] == serve_side), serve_seq].value_counts()\n",
+    "                serve_dir_counts2[\"server_name\"] = player2\n",
+    "                \n",
+    "                contingency_table = contingency_table.append(serve_dir_counts2, ignore_index=True)\n",
+    "            \n",
+    "                contingency_table.set_index(\"server_name\", inplace=True)\n",
+    "                contingency_table = contingency_table[[\"wide\", \"body\", \"t\"]]\n",
+    "                chi_square(contingency_table, print_table = True)\n",
+    "                print()\n",
+    "    else:\n",
+    "        print(\"No match found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hard\n",
+      "deuce\n",
+      "Sv1_direction\n",
+      "chi-squared test results:\n",
+      "chi2 test stats = 8.200157\n",
+      "p = 0.016571\n",
+      "dof = 2 \n",
+      "probability=0.950, critical=5.991, stat=8.200\n",
+      "Dependent (reject H0)\n",
+      "significance=0.050, p=0.017\n",
+      "Dependent (reject H0)\n",
+      "              wide   body      t\n",
+      "server_name                     \n",
+      "wawrinka     265.0   50.0  173.0\n",
+      "federer      788.0  148.0  698.0\n",
+      "\n",
+      "Sv2_direction\n",
+      "chi-squared test results:\n",
+      "chi2 test stats = 12.931959\n",
+      "p = 0.001555\n",
+      "dof = 2 \n",
+      "probability=0.950, critical=5.991, stat=12.932\n",
+      "Dependent (reject H0)\n",
+      "significance=0.050, p=0.002\n",
+      "Dependent (reject H0)\n",
+      "              wide   body      t\n",
+      "server_name                     \n",
+      "wawrinka      28.0   88.0   79.0\n",
+      "federer      162.0  226.0  213.0\n",
+      "\n",
+      "ad\n",
+      "Sv1_direction\n",
+      "chi-squared test results:\n",
+      "chi2 test stats = 17.374542\n",
+      "p = 0.000169\n",
+      "dof = 2 \n",
+      "probability=0.950, critical=5.991, stat=17.375\n",
+      "Dependent (reject H0)\n",
+      "significance=0.050, p=0.000\n",
+      "Dependent (reject H0)\n",
+      "              wide   body      t\n",
+      "server_name                     \n",
+      "wawrinka     187.0   19.0  243.0\n",
+      "federer      753.0  104.0  656.0\n",
+      "\n",
+      "Sv2_direction\n",
+      "chi-squared test results:\n",
+      "chi2 test stats = 2.607542\n",
+      "p = 0.271506\n",
+      "dof = 2 \n",
+      "probability=0.950, critical=5.991, stat=2.608\n",
+      "Independent (fail to reject H0)\n",
+      "significance=0.050, p=0.272\n",
+      "Independent (fail to reject H0)\n",
+      "              wide   body      t\n",
+      "server_name                     \n",
+      "wawrinka      82.0   56.0   33.0\n",
+      "federer      304.0  168.0  146.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "compare_player_serves_when_they_play_same_opponent(point_data = df_points, match_data = df_matches, player1 = \"di\", player2 = \"federer\", opponent = \"djokovic\", surface = \"hard\")"
    ]
   },
   {
